[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/Logo.png" type="Texture" id=1]
[ext_resource path="res://Menu/Buttons/CreditsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Buttons/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/game-over.jpg" type="Texture" id=5]
[ext_resource path="res://Menu/GameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://Menu/fonts/montserrat_48.tres" type="DynamicFont" id=7]

[sub_resource type="Theme" id=1]

[node name="Game Over Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = -0.00123441
anchor_right = 1.0
anchor_bottom = 0.998766
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 470.0
margin_bottom = 115.0
size_flags_horizontal = 0
size_flags_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 120.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1680.0
margin_bottom = 800.0
rect_min_size = Vector2( 0, 800 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Game Over" type="Label" parent="Menu/CenterRow/Buttons"]
margin_top = 164.0
margin_right = 1680.0
margin_bottom = 264.0
size_flags_vertical = 5
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Menu/CenterRow/Buttons/Game Over"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.384314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 268.0
margin_bottom = 388.0
rect_min_size = Vector2( 360, 120 )
size_flags_vertical = 4

[node name="CreditsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 392.0
margin_right = 1680.0
margin_bottom = 512.0
size_flags_vertical = 1

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 516.0
margin_bottom = 636.0
rect_min_size = Vector2( 360, 120 )
size_flags_horizontal = 1
size_flags_vertical = 4
[connection signal="pressed" from="Menu/CenterRow/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
